error.log
2023-09-27 16:32:51,652 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:33:02,793 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:34:20,303 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:34:28,895 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:35:25,472 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:36:55,624 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:42:00,078 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:43:45,140 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:43:50,549 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:46:41,720 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 31, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
2023-09-27 16:48:23,123 - ERROR - An error occurred: expected an indented block (main.py, line 11)
Traceback (most recent call last):
  File "C:\Dawkside\ds.py", line 30, in <module>
    from classes.main import Main
  File "C:\Dawkside\classes\main.py", line 11
    class Main:
    ^
IndentationError: expected an indented block
